--- a/redis.conf
+++ b/redis.conf
@@ -1,7 +1,7 @@
-bind 127.0.0.1
+# bind 127.0.0.1
 port 6379
 
-protected-mode yes
+protected-mode no
 
 tcp-backlog 511
 
@@ -96,7 +96,7 @@ dir ./
 # another Redis server. A few things to understand ASAP about Redis replication.
 #
 # 1) Redis replication is asynchronous, but you can configure a master to
-#    stop accepting writes if it appears to be not connected with at least
+#   stop accepting writes if it appears to be not connected with at least
 #    a given number of slaves.
 # 2) Redis slaves are able to perform a partial resynchronization with the
 #    master if the replication link is lost for a relatively small amount of
