--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ services:
 - docker
 
 script:
+- docker login -u $DOCKER_USER -p $DOCKER_PASS
 - chmod ugo+x ./build.sh
 - ./build.sh $(git rev-parse --short HEAD)
 
