--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
 script:
 - docker login -u $DOCKER_USER -p $DOCKER_PASS
 - chmod ugo+x ./build.sh
-- export TAG=`if [ "$TRAVIS_BRANCH" == "master" ];  then echo "production"; elif ["$TRAVIS_BRANCH" == "develop"]; then echo "stage"; else echo "dev-"$TRAVIS_BRANCH ; fi`
+- export TAG=`if [ "$TRAVIS_BRANCH" == "master" ];  then echo "production"; elif ["$TRAVIS_BRANCH" == "develop"]; then echo "stage"; else echo "dev-"$TRAVIS_COMMIT::7 ; fi`
 - ./build.sh $TAG
 
 env:
